# kripto-sinyal

./: .replit  analyzer.py  app.py  coin_list.py  pyproject.toml  replit.nix  requirements.txt
static/: style.css
templates/: index.html
