[tool.poetry]
name = "kripto-sinyal"
version = "0.1.0"
description = "Kripto Sinyal Oluşturucu"
authors = ["Erdoğan Yılmaz <erdogan@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2"
ccxt = "^4.0"
pandas = "^2.2.3"
numpy = "^2.2.5"
ta = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"